--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fws-stack",
+  "name": "{projectName}",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -50,5 +50,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.14.2"
 }
